<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <include
        layout="@layout/appbar_without_tab"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/blue"
            android:contentDescription="@string/fab_desc"
            android:text="Save Activity"
            android:textColor="@color/white"
            app:elevation="4dp"
            app:icon="@drawable/ic_baseline_icon_add" />

        <TextView
            android:id="@+id/res_act_title"
            android:layout_width="320dp"
            android:layout_height="220dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:textColor="@color/darkGreen"
            android:textSize="40sp" />

        <TableLayout
            android:id="@+id/res_table"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_width="118dp"
                    android:layout_marginLeft="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/no_part"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/res_no_part_tv"
                    android:layout_width="143dp"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:textSize="20dp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/pricing"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/res_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="20dp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/prep"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/res_prep_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="20dp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/res_link_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/Link"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/res_link_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="20dp" />

            </TableRow>

        </TableLayout>


        <Button
            android:id="@+id/res_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/green"
            android:text="@string/tryAgain"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>